SERVER-68579: Fix the compilation warning